--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,22 @@
+* {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
 
 .App-header {
@@ -28,11 +34,42 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row-container {
+  display: flex;
+  flex-direction: row;
+
+  padding: 10px;
+}
+
+.col-container {
+  display: flex;
+  flex-direction: column;
+
+  padding: 10px;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.chatroom {
+  min-height: 100vh;
+
+  justify-content: flex-end;
+}
+
+.msg-sender {
+  align-self: flex-end;
+}
+
+.msg-body {
+  padding-left: 8px;
+  padding-right: 8px;
+
+  width: 50%;
+  align-self: flex-end;
+}
+
+.border {
+  border: 1px solid black;
 }
