--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ ul {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
 }
@@ -52,10 +52,16 @@ ul {
   flex-grow: 1;
 }
 
-.chatroom {
-  min-height: 100vh;
+.chat-module {
+  max-height: 100vh;
+}
 
+.chatroom {
   justify-content: flex-end;
+}
+
+.msg-list {
+  overflow-y: auto;
 }
 
 .msg-sender {
