--- a/src/App.css
+++ b/src/App.css
@@ -19,17 +19,6 @@ ul {
   font-size: calc(10px + 2vmin);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -52,8 +41,15 @@ ul {
   flex-grow: 1;
 }
 
+@media only screen and (max-width: 600px) {
+  .hide-mobile {
+    display: none;
+  }
+}
+
 .chat-module {
   max-height: 100vh;
+  width: 100vw;
 }
 
 .login-module {
