--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,10 @@ ul {
   }
 }
 
+.chats-list {
+  max-width: 400px;
+}
+
 .chat-module {
   max-height: 100vh;
   width: 100vw;
@@ -55,7 +59,6 @@ ul {
 .login-module {
   max-width: 500px;
   max-height: 500px;
-  
   padding: 25px;
 }
 
@@ -68,7 +71,15 @@ ul {
 }
 
 .msg-sender {
+  font-size: calc(10px + 1vmin);
+}
+
+.msg-self {
   align-self: flex-end;
+}
+
+.msg-other {
+  align-self: flex-start;
 }
 
 .msg-body {
@@ -76,8 +87,6 @@ ul {
   padding-right: 10px;
 
   color: white;
-
-  align-self: flex-end;
 }
 
 .border {
