--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,8 @@ ul {
   max-width: 500px;
   max-height: 500px;
   padding: 25px;
+
+  background: white;
 }
 
 .chatroom {
@@ -89,4 +91,12 @@ ul {
 
 .border {
   border: 1px solid black;
+}
+
+#main-navbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
 }
