--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,32 @@ a, a:visited{
   max-width: 50%;
 }
 
+.msg-text {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  border-radius: .25rem;
+}
+
+.msg-primary {
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+
+.msg-outline-primary {
+  color: #0d6efd;
+  border-color: #0d6efd;
+}
+
 .msg-self {
   align-self: flex-end;
 }
