--- a/src/App.css
+++ b/src/App.css
@@ -87,14 +87,14 @@ a, a:visited{
 
 .msg-sender {
   font-size: calc(10px + 1vmin);
-  max-width: 50%;
+  max-width: 75%;
 }
 
 .msg-body {
   padding-left: 10px;
   padding-right: 10px;
 
-  max-width: 50%;
+  max-width: 75%;
 }
 
 .msg-text {
@@ -102,7 +102,7 @@ a, a:visited{
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   vertical-align: middle;
   background-color: transparent;
